--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
     "@supabase/supabase-js": "^2.54.0",
     "dotenv": "^17.2.1",
@@ -20,11 +19,10 @@
     "expo-router": "~5.1.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-screens": "~4.11.1",
-    "react-native-web": "^0.20.0",
-    "@react-native-picker/picker": "2.11.1"
+    "@react-native-picker/picker": "2.11.1",
+    "expo-splash-screen": "~0.30.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
