--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "Toolbox",
     "slug": "toolbox",
+    "scheme": "toolbox",
     "version": "1.0.0",
     "orientation": "portrait",
     "userInterfaceStyle": "light",
