--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-native": "0.79.5",
     "react-native-screens": "~4.11.1",
     "@react-native-picker/picker": "2.11.1",
-    "expo-splash-screen": "~0.30.10"
+    "expo-splash-screen": "~0.30.10",
+    "react-native-safe-area-context": "5.4.0",
+    "expo-font": "~13.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
